airflow/logs/dag_id=postgres_dag/run_id=manual__2023-10-24T165824.575637+0000/task_id=insert_data/attempt=1.log
[2023-10-24 16:58:28,884] {taskinstance.py:1179} INFO - Dependencies all met for <TaskInstance: postgres_dag.insert_data manual__2023-10-24T16:58:24.575637+00:00 [queued]>
[2023-10-24 16:58:28,905] {taskinstance.py:1179} INFO - Dependencies all met for <TaskInstance: postgres_dag.insert_data manual__2023-10-24T16:58:24.575637+00:00 [queued]>
[2023-10-24 16:58:28,906] {taskinstance.py:1376} INFO - 
--------------------------------------------------------------------------------
[2023-10-24 16:58:28,919] {taskinstance.py:1377} INFO - Starting attempt 1 of 1
[2023-10-24 16:58:28,920] {taskinstance.py:1378} INFO - 
--------------------------------------------------------------------------------
[2023-10-24 16:58:28,961] {taskinstance.py:1397} INFO - Executing <Task(PostgresOperator): insert_data> on 2023-10-24 16:58:24.575637+00:00
[2023-10-24 16:58:28,974] {standard_task_runner.py:52} INFO - Started process 317 to run task
[2023-10-24 16:58:28,979] {standard_task_runner.py:79} INFO - Running: ['***', 'tasks', 'run', 'postgres_dag', 'insert_data', 'manual__2023-10-24T16:58:24.575637+00:00', '--job-id', '58', '--raw', '--subdir', 'DAGS_FOLDER/postgres_dag.py', '--cfg-path', '/tmp/tmpe_bduu5v', '--error-file', '/tmp/tmpd8qqtmwq']
[2023-10-24 16:58:28,981] {standard_task_runner.py:80} INFO - Job 58: Subtask insert_data
[2023-10-24 16:58:29,167] {task_command.py:371} INFO - Running <TaskInstance: postgres_dag.insert_data manual__2023-10-24T16:58:24.575637+00:00 [running]> on host 0d4d602ef8f0
[2023-10-24 16:58:29,516] {taskinstance.py:1591} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=Alex
AIRFLOW_CTX_DAG_ID=postgres_dag
AIRFLOW_CTX_TASK_ID=insert_data
AIRFLOW_CTX_EXECUTION_DATE=2023-10-24T16:58:24.575637+00:00
AIRFLOW_CTX_TRY_NUMBER=1
AIRFLOW_CTX_DAG_RUN_ID=manual__2023-10-24T16:58:24.575637+00:00
[2023-10-24 16:58:29,552] {base.py:68} INFO - Using connection ID 'my_db_conn' for task execution.
[2023-10-24 16:58:29,621] {dbapi.py:231} INFO - Running statement: INSERT INTO VALUES(1, 'fghjk'), parameters: None
[2023-10-24 16:58:29,647] {taskinstance.py:1909} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/postgres/operators/postgres.py", line 92, in execute
    self.hook.run(self.sql, self.autocommit, parameters=self.parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 211, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 235, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "1"
LINE 1: INSERT INTO VALUES(1, 'fghjk')
                           ^

[2023-10-24 16:58:29,677] {taskinstance.py:1420} INFO - Marking task as FAILED. dag_id=postgres_dag, task_id=insert_data, execution_date=20231024T165824, start_date=20231024T165828, end_date=20231024T165829
[2023-10-24 16:58:29,740] {standard_task_runner.py:97} ERROR - Failed to execute job 58 for task insert_data (syntax error at or near "1"
LINE 1: INSERT INTO VALUES(1, 'fghjk')
                           ^
; 317)
[2023-10-24 16:58:29,809] {local_task_job.py:156} INFO - Task exited with return code 1
[2023-10-24 16:58:29,921] {local_task_job.py:273} INFO - 0 downstream tasks scheduled from follow-on schedule check
